--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "~1.17.1",
+    "cheerio": "^0.22.0",
     "colors": "^1.1.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
@@ -14,6 +15,7 @@
     "express": "~4.15.2",
     "hbs": "~4.0.1",
     "morgan": "~1.8.1",
+    "request": "^2.81.0",
     "serve-favicon": "~2.4.2"
   }
 }
